added final models

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ venv/
 papers/
 notebooklm_summaries/
 st-vincents-university-hospital-university-college-dublin-sleep-apnea-database-1.0.0.zip
+idk/
+ConvTran-main/
