added confusion matrix

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ notebooklm_summaries/
 st-vincents-university-hospital-university-college-dublin-sleep-apnea-database-1.0.0.zip
 idk/
 ConvTran-main/
+tsfel_cache_xgboost/
+tsfel_cache/
+Presentations/
+BetterModels/datastore/
+BetterModels/other_saved_data/
+saved_data/
+.vscode/
